# osso-mahjong

./: Makefile.am  configure.ac
debian/: changelog  control  copyright  osso-mahjong.install  osso-mahjong.links  rules
src/: Makefile.am  appdata.h  com.nokia.osso_mahjong.service.in  com.nokia.osso_mahjong.startup.service.in  dbus.c  dbus.h  hiscore.c  hiscore.h  mahjong_communication.c  mahjong_communication.h  mahjong_core.c  mahjong_core.h  mahjong_i18n.h  mahjong_startup.desktop.in  main.c  main.h  osso_mahjong.conf.in  settings.c  settings.h  sound.c  sound.h  sounds.h  state_save.c  state_save.h
src/mahjong/: Makefile.am  drawing.c  drawing.h  games-clock.c  games-clock.h  mahjongg.c  mahjongg.h  solubility.c  solubility.h
src/plugin/: Makefile.am  plugin.c
src/ui/: Makefile.am  callbacks.c  callbacks.h  interface.c  interface.h  mahjong_button.c  mahjong_button.h
